# discord-acp-client-for-kiro-cli

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  run.sh
docs/: docker.md  tool-call-approval.md
examples/agents/: general.json  powerful-sandbox.json
src/discord_acp_kiro/: __init__.py  acp_client.py  agent_manager.py  agent_session.py  auth.py  bot.py  config.py  logging_setup.py  render.py  ui.py
tests/: conftest.py  test_acp_client.py  test_agent_manager.py  test_agent_session.py  test_auth_flow.py  test_auth_login.py  test_auth_whoami.py  test_bot_forwarding.py  test_bot_lifecycle.py  test_bot_routing.py  test_config.py  test_render.py  test_retry_view.py  test_smoke.py
