[project]
name = "discord-acp-client-for-kiro-cli"
version = "0.1.0"
requires-python = ">=3.14.4"
dependencies = [
    "discord-py>=2.4",
    "python-dotenv>=1.0",
]

[project.scripts]
discord-acp-kiro-bot = "discord_acp_kiro.bot:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/discord_acp_kiro"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
